# obsidian_mm

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_LINUX.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: normalization.yaml  regimes.yaml  sources.yaml
docs/: BASELINE_SYSTEM.md  CHANGELOG_2026-02-04.md  GUARDRAILS.md
obsidian/: __init__.py
obsidian/baseline/: __init__.py  calculator.py  history.py  storage.py  types.py
obsidian/core/: __init__.py  config.py  constants.py  exceptions.py  types.py
obsidian/dashboard/: __init__.py  app.py
obsidian/explain/: __init__.py  generator.py
obsidian/features/: __init__.py  aggregator.py  darkpool.py  greeks.py  price_context.py
obsidian/guardrails/: __init__.py  conventions.py  types.py  validators.py
obsidian/ingest/: __init__.py  base.py  cache.py  fmp.py  polygon.py  rate_limiter.py  unusual_whales.py
obsidian/normalization/: __init__.py  methods.py  pipeline.py  rolling.py
obsidian/pipeline/: __init__.py  daily.py
obsidian/regimes/: __init__.py  classifier.py  labels.py
obsidian/scoring/: __init__.py  unusualness.py
scripts/: compute_baseline.py  daily_cron.sh  deploy_linux.sh  diagnose_api.py  obsidian-daily.service  obsidian-daily.timer  obsidian-dashboard.service  run_batch.py  run_daily.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_features.py  test_normalization.py  test_regimes.py  test_scoring.py
